--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ script:
   - julia -e 'Pkg.clone(pwd()); Pkg.build("QuartzImageIO");'
   - julia -e 'Pkg.checkout("Images")'
   - julia -e 'Pkg.status()'
-  - julia -e 'Pkg.test("QuartzImageIO"; coverage=true)'
+  - CGBITMAP_CONTEXT_LOG_ERRORS=1 julia -e 'Pkg.test("QuartzImageIO"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("QuartzImageIO")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
